[tool.poetry]
name = "goit-python-web-hw-6"
version = "0.1.0"
description = ""
authors = ["Iryna Dachuk <iradachuk@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw_6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.6.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
